# haskell-labs

./: .travis.yml  README.md  lab.cabal
src/: Main.hs
src/My/: Arguments.hs  Bayes.hs  CSV.hs  FCM.hs
test/My/: BayesSpec.hs  CSVSpec.hs  FCMSpec.hs
