name:             lab
version:          0.0.0
license:          MIT
-- license-file:     LICENSE
-- copyright:        (c) 2013 Simon Hengel
-- author:           Simon Hengel <sol@typeful.net>
-- maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

executable lab
  main-is:        Main.hs
  ghc-options:
      -Wall
      -threaded
      -eventlog
      -rtsopts
  hs-source-dirs:
      src
  -- exposed-modules:
      -- Data.String.Strip
  build-depends:
      base    == 4.*
    , containers
    , csv
    , vector
    , random
    , split
    , pipes
    , text
    , parallel

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      My.CSV
      My.Arguments
      My.FCM
      My.Bayes
  build-depends:
      base    == 4.*
    , containers
    , csv
    , vector
    , random
    , split
    , pipes
    , text
    , parallel

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , lab
    , hspec   == 2.*
    , vector
    , random
    , split
    , pipes
    , text
    , parallel
